<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical" android:layout_marginTop="8dp"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                  app:layout_constraintBottom_toBottomOf="parent">

        <Button
                android:text="@string/get_list_of_avalabile_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_getsensorlist"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_getaccumelator"
                app:layout_constraintHorizontal_bias="0.0"/>
        <Button
                android:text="@string/get_accumulator_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_getaccumelator"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"

                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_getsensorlist"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_getaccumelator2"/>
        <Button
                android:text="@string/get_temrature_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_gettemprature"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintBottom_toBottomOf="parent"
        />

        <Button
                android:text="@string/get_proximatry_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_getproximatry"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintBottom_toBottomOf="parent"
        />

        <Button
                android:text="@string/get_light_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_getlightsendo"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintBottom_toBottomOf="parent"
        />
        <Button
                android:text="@string/camerax_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_opencamerax"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintBottom_toBottomOf="parent"
        />
        <Button
                android:text="@string/camera2_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_camera2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintBottom_toBottomOf="parent"
        />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>